# kr-rest-days

./: .gitignore  GEMINI.md  README.md  pyproject.toml
src/kr_rest_days/: client.py  config.py  main.py  models.py  service.py
src/kr_rest_days/static/: style.css
src/kr_rest_days/templates/: index.html
tests/: test_service.py
